[package]
name = "protohakers"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.83"
serde = { version = "1.0.201", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1", features = ["io-util", "net", "macros", "rt-multi-thread"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
